layer index and close menu on navigation

--- a/public/global.css
+++ b/public/global.css
@@ -26,6 +26,10 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 
+ol, ul {
+	list-style-type: none;
+}
+
 /*** GLOBAL ***/
 
 html, body, main {
