--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -94,7 +94,7 @@
   }
 }
 
-@mixin typo-grotesk-menu-100 {
+@mixin typo-grotesk-title-100 {
   @include grotesk-stack;
   font-size: 100px;
   line-height: 100px;
