--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -62,9 +62,10 @@ h2, p {
   margin-bottom: 1.4em;
 }
 
+/*
 :root {
   --color-mint: #00FF94;
-  --color-beige: #F0E8C6;
-  --color-red: #FF3A52;
+  --color-beige: #F8F1D4;
   --color-text: black;
 }
+*/
