--- a/src/scss/includes.scss
+++ b/src/scss/includes.scss
@@ -1,6 +1,6 @@
 // just include this in your components
 
-@import './variables.scss';
+@import './colors.scss';
 @import './breakpoints.scss';
 @import './mixins.scss';
 @import './typography.scss';
