logo color, serif font

--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -3,6 +3,8 @@
   src: url('GenevaRegular.ttf') format('truetype'); 
 }
 
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap');
+
 /*** RESET ***/
 
 html, body, div, span, applet, object, iframe,
