--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -1,5 +1,5 @@
 $color-mint: #00FF94;
-$color-beige: #F0E8C6;
+$color-beige: #F8F1D4;
 $color-red: #FF3A52;
 $color-text: black;
 $color-white: #FFFFFF;
