--- a/src/scss/includes.scss
+++ b/src/scss/includes.scss
@@ -1,6 +1,7 @@
 // just include this in your components
 
 @import './colors.scss';
+@import './dist.scss';
 @import './breakpoints.scss';
 @import './mixins.scss';
 @import './typography.scss';
