use local fonts

--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -1,9 +1,29 @@
 @font-face { 
   font-family: 'GenevaRegular';
-  src: url('GenevaRegular.ttf') format('truetype'); 
+  src: url('Geneva.ttf') format('truetype'); 
+  font-display: swap;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap');
+@font-face { 
+  font-family: 'EB Garamont';
+  font-style: normal;
+  src: url('EBGaramond-Regular.woff2') format('woff2'); 
+  font-display: swap;
+}
+
+@font-face { 
+  font-family: 'EB Garamont';
+  font-style: italic;
+  src: url('EBGaramond-Italic.woff2') format('woff2'); 
+  font-display: swap;
+}
+
+@font-face { 
+  font-family: 'OldEnglishFive';
+  src: url('OldEnglishFive.woff2.woff2') format('woff2'); 
+  font-display: swap;
+}
+
 
 /*** RESET ***/
 
@@ -42,7 +62,7 @@ html, body, main {
 
 body {
   box-sizing: border-box;
-  font-family: GenevaRegular, Geneva, sans-serif;
+  font-family: Geneva, GenevaRegular, sans-serif;
   font-size: 24px;
   line-height: 32px;
   background-color: var(--color-beige);
