--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -7,7 +7,7 @@
   letter-spacing: 0em;
 } 
 @mixin grotesk-stack {
-  font-family: "Geneva", sans-serif;
+  font-family: GenevaRegular, "Geneva", sans-serif;
   letter-spacing: 0em;
 } 
 
