--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -21,3 +21,11 @@ $card-bg-colors: (
 "mint":  $color-mint,
 "beige": $color-beige
 );
+
+@mixin box-shadow {
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
+}
+
+@mixin box-shadow-inset {
+  box-shadow: inset 0px 0px 20px rgba(0, 0, 0, 0.25);
+}
