--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -8,19 +8,21 @@ $color-white: #FFFFFF;
 $color-gray6: #F2F2F2;
 
 
-/*
+
 $card-bg-colors: (
-  "white": color.change($color-white, $alpha: 0.9),
+  "white": color.change($color-gray6, $alpha: 0.9),
   "mint":  color.change($color-mint,  $alpha: 0.9),
   "beige": color.change($color-beige, $alpha: 0.9)
   );
-*/
 
+
+/*
 $card-bg-colors: (
 "white": $color-gray6,
 "mint":  $color-mint,
 "beige": $color-beige
 );
+*/
 
 @mixin box-shadow {
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
