start integrating almanac

--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -20,7 +20,7 @@
 
 @font-face { 
   font-family: 'OldEnglishFive';
-  src: url('OldEnglishFive.woff2.woff2') format('woff2'); 
+  src: url('OldEnglishFive.woff2') format('woff2'); 
   font-display: swap;
 }
 
