--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -24,10 +24,12 @@ $card-bg-colors: (
 );
 */
 
+$shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
+
 @mixin box-shadow {
-  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
+  box-shadow: $shadow;
 }
 
 @mixin box-shadow-inset {
-  box-shadow: inset 0px 0px 20px rgba(0, 0, 0, 0.25);
+  box-shadow: inset $shadow;
 }
