--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -146,12 +146,29 @@
   @include grotesk-stack;
   font-size: 20px;
   line-height: 26px;
-  font-variant: small-caps;
+  /*font-variant: small-caps;*/
 
   @include media-small {
     font-size: 15px;
     line-height: 19px;
     font-feature-settings: 'liga' off;
+  }
+}
+
+@mixin typo-grotesk-text-24-multistep {
+  @include grotesk-stack;
+
+  font-size: 20px;
+  line-height: 26px;
+
+  @include media-small {
+    font-size: 18px;
+    line-height: 24px;
+  }
+
+  @include media-larger {
+    font-size: 24px;
+    line-height: 32px;
   }
 }
 
