--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -25,6 +25,7 @@ $card-bg-colors: (
 */
 
 $shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
+$round-inset-shadow: inset 20px 10px 20px rgba(0, 0, 0, 0.25);
 
 @mixin box-shadow {
   box-shadow: $shadow;
