refactor static folder

--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -1,26 +1,26 @@
 @font-face { 
   font-family: 'GenevaRegular';
-  src: url('build/Geneva.ttf') format('truetype'); 
+  src: url('assets/fonts/Geneva.ttf') format('truetype'); 
   font-display: swap;
 }
 
 @font-face { 
   font-family: 'EB Garamont';
   font-style: normal;
-  src: url('build/EBGaramond-Regular.woff2') format('woff2'); 
+  src: url('assets/fonts/EBGaramond-Regular.woff2') format('woff2'); 
   font-display: swap;
 }
 
 @font-face { 
   font-family: 'EB Garamont';
   font-style: italic;
-  src: url('build/EBGaramond-Italic.woff2') format('woff2'); 
+  src: url('assets/fonts/EBGaramond-Italic.woff2') format('woff2'); 
   font-display: swap;
 }
 
 @font-face { 
   font-family: 'OldEnglishFive';
-  src: url('build/OldEnglishFive.woff2') format('woff2'); 
+  src: url('assets/fonts/OldEnglishFive.woff2') format('woff2'); 
   font-display: swap;
 }
 
