--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -90,14 +90,14 @@
   font-size: 21px;
   line-height: 24px;
 
-  @include media-small {
+  @include media-1col-only {
     font-size: 24px;
     line-height: 29px;
   }
 
   @include media-larger {
-    font-size: 22px;
-    line-height: 28px;
+    font-size: 28px;
+    line-height: 32px;
   }
 }
 
